data/derived/comb/progs/unify/prog2147.ml.out
Characters 16-21:
  let (_, test) = x + 1 in test;;
                  ^^^^^
Error: This expression has type int but an expression was expected of type
         'a * 'b
